--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
             <li id="tab1Tab"></li>
             <li id="tab2Tab" class="active">
                 <div style="height:35px">
-                    <select style="float:left; width:110px" id="dateRangeSel" onchange="ChangeDateRange()">
+                    <select style="float:left; width:110px" id="offsum_dateRangeSel" onchange="ChangeDateRange('offsum')">
                         <option value="today">Today</option>
                         <option value="yesterday">Yesterday</option>
                         <option value="wtd">Week to Date</option>
@@ -59,15 +59,28 @@
                         <option value="custom">- custom -</option>
                     </select>
                     <span style="float:left; margin-left:10px">Start:</span>
-                    <input style="float:left; width:100px" id="startdate" name="startdate" type="text" value="@today" onchange="DateChanged()" />
+                    <input style="float:left; width:100px" id="offsum_startdate" name="startdate" type="text" value="@today" onchange="DateChanged('offsum')" />
                     <span style="float:left; margin-left:10px">End:</span>
-                    <input style="float:left; width:100px" id="enddate" name="enddate" type="text" value="@today" onchange="DateChanged()" />
-                    <a class="button" style="padding:3px; margin-left:10px" id="filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid(); return false">Filter</a>
+                    <input style="float:left; width:100px" id="offsum_enddate" name="enddate" type="text" value="@today" onchange="DateChanged('offsum')" />
+                    <a class="button" style="padding:3px; margin-left:10px" id="offsum_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('offsum'); return false">Filter</a>
                 </div>
-                <div id="offerSummaryGrid"></div>
+                <div id="offsumGrid"></div>
             </li>
             <li id="tab3Tab">
-                <div id="dailySummaryGrid"></div>
+                <div style="height:35px">
+                    <select style="float:left; width:110px" id="daysum_dateRangeSel" onchange="ChangeDateRange('daysum')">
+                        <option value="mtd">Month to Date</option>
+                        <option value="ytd">Year to Date</option>
+                        <option value="lastmonth">Last Month</option>
+                        <option value="custom">- custom -</option>
+                    </select>
+                    <span style="float:left; margin-left:10px">Start:</span>
+                    <input style="float:left; width:100px" id="daysum_startdate" name="startdate" type="text" value="@firstOfMonth" onchange="DateChanged('daysum')" />
+                    <span style="float:left; margin-left:10px">End:</span>
+                    <input style="float:left; width:100px" id="daysum_enddate" name="enddate" type="text" value="@today" onchange="DateChanged('daysum')" />
+                    <a class="button" style="padding:3px; margin-left:10px" id="daysum_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('daysum'); return false">Filter</a>
+                </div>
+                <div id="daysumGrid"></div>
             </li>
             <li id="tab4Tab"></li>
         </ul>
@@ -88,6 +101,15 @@
 @section head {
     <link href="~/Content/kendo/2012.3.1114/kendo.common.min.css" rel="stylesheet" />
     <link href="~/Content/kendo/2012.3.1114/kendo.bootstrap.min.css" rel="stylesheet" />
+
+<style type="text/css">
+    .k-grid-header-wrap {
+        height: 30px;
+    }
+    .k-grid-footer-wrap {
+        height: 32px;
+    }
+</style>
 }
 
 @section scripts {
@@ -96,53 +118,55 @@
     <script src="~/Scripts/kendo/2012.3.1114/cultures/kendo.culture.en-GB.min.js"></script>
     <script src="~/Scripts/kendo/2012.3.1114/cultures/kendo.culture.en-AU.min.js"></script>
     <script>
-        function DateChanged() {
-            $('#dateRangeSel').val('custom');
-            $('#filterBtn').attr('disabled', false);
+        function DateChanged(grid) {
+            $('#' + grid + '_dateRangeSel').val('custom');
+            $('#' + grid + '_filterBtn').attr('disabled', false);
         }
 
-        function ChangeDateRange() {
+        function ChangeDateRange(grid) {
+            var startId = '#' + grid + '_startdate';
+            var endId = '#' + grid + '_enddate';
             var refresh = true;
-            var dateRange = $('#dateRangeSel').val();
+            var dateRange = $('#' + grid + '_dateRangeSel').val();
             switch (dateRange) {
                 case "today":
-                    $('#startdate').val('@today');
-                    $('#enddate').val('@today');
+                    $(startId).val('@today');
+                    $(endId).val('@today');
                     break;
                 case "yesterday":
-                    $('#startdate').val('@yesterday');
-                    $('#enddate').val('@yesterday');
+                    $(startId).val('@yesterday');
+                    $(endId).val('@yesterday');
                     break;
                 case "wtd":
-                    $('#startdate').val('@firstOfWeek');
-                    $('#enddate').val('@today');
+                    $(startId).val('@firstOfWeek');
+                    $(endId).val('@today');
                     break;
                 case "mtd":
-                    $('#startdate').val('@firstOfMonth');
-                    $('#enddate').val('@today');
+                    $(startId).val('@firstOfMonth');
+                    $(endId).val('@today');
                     break;
                 case "ytd":
-                    $('#startdate').val('@firstOfYear');
-                    $('#enddate').val('@today');
+                    $(startId).val('@firstOfYear');
+                    $(endId).val('@today');
                     break;
                 case "lastweek":
-                    $('#startdate').val('@firstOfLastWeek');
-                    $('#enddate').val('@lastOfLastWeek');
+                    $(startId).val('@firstOfLastWeek');
+                    $(endId).val('@lastOfLastWeek');
                     break;
                 case "lastmonth":
-                    $('#startdate').val('@firstOfLastMonth');
-                    $('#enddate').val('@lastOfLastMonth');
+                    $(startId).val('@firstOfLastMonth');
+                    $(endId).val('@lastOfLastMonth');
                     break;
                 default:
                     refresh = false;
             }
             if (refresh)
-                RefreshGrid();
+                RefreshGrid(grid);
         }
 
-        function RefreshGrid() {
-            $('#offerSummaryGrid').data('kendoGrid').dataSource.read();
-            $('#filterBtn').attr('disabled', true);
+        function RefreshGrid(grid) {
+            $('#' + grid + 'Grid').data('kendoGrid').dataSource.read();
+            $('#' + grid + '_filterBtn').attr('disabled', true);
         }
 
         function FormatCurr(val, culture) {
@@ -171,8 +195,8 @@
                         url: url,
                         data: function () {
                             return {
-                                startdate: $('#startdate').val(),
-                                enddate: $('#enddate').val()
+                                startdate: $('#offsum_startdate').val(),
+                                enddate: $('#offsum_enddate').val()
                             };
                         }
                     }
@@ -202,7 +226,7 @@
                 ]
             });
 
-            $('#offerSummaryGrid').kendoGrid({
+            $('#offsumGrid').kendoGrid({
                 dataSource: dataSource,
                 height: 400,
                 columns: [
@@ -223,8 +247,8 @@
                 pageable: true
             });
 
-            $('#startdate').kendoDatePicker();
-            $('#enddate').kendoDatePicker();
+            $('#offsum_startdate').kendoDatePicker();
+            $('#offsum_enddate').kendoDatePicker();
         }
 
         function SetupDailySummaryGrid() {
@@ -243,8 +267,8 @@
                         url: url,
                         data: function () {
                             return {
-                                //startdate: 'xx',
-                                //enddate: 'yy'
+                                startdate: $('#daysum_startdate').val(),
+                                enddate: $('#daysum_enddate').val()
                             };
                         }
                     }
@@ -276,7 +300,7 @@
                 ]
             });
 
-            $('#dailySummaryGrid').kendoGrid({
+            $('#daysumGrid').kendoGrid({
                 dataSource: dataSource,
                 height: 400,
                 columns: [
@@ -300,6 +324,8 @@
                 //    // retrieve with $('#dailySummaryGrid').data("culture");
                 //}
             });
+            $('#daysum_startdate').kendoDatePicker();
+            $('#daysum_enddate').kendoDatePicker();
         }
     </script>
 }
