--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
@@ -81,6 +81,69 @@
                     <a class="button" style="padding:3px; margin-left:10px" id="daysum_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('daysum'); return false">Filter</a>
                 </div>
                 <div id="daysumGrid"></div>
+                <div id="example" class="k-content">
+                    <div class="configuration k-widget k-header" style="width:170px; float:right">
+                        <span class="configHead">Base date unit</span>
+                        <ul class="options">
+                            <li>
+                                <input id="baseUnitAuto" name="baseUnit"
+                                        type="radio" value="" autocomplete="off" />
+                                <label for="baseUnitAuto">Automatic</label>
+                            </li>
+                            <li>
+                                <input id="baseUnitYears" name="baseUnit"
+                                        type="radio" value="years" autocomplete="off" />
+                                <label for="baseUnitYears">Years</label>
+                            </li>
+                            <li>
+                                <input id="baseUnitMonths" name="baseUnit"
+                                        type="radio" value="months" autocomplete="off" />
+                                <label for="baseUnitMonths">Months</label>
+                            </li>
+                            <li>
+                                <input id="baseUnitWeeks" name="baseUnit"
+                                        type="radio" value="weeks" autocomplete="off" />
+                                <label for="baseUnitWeeks">Weeks</label>
+                            </li>
+                            <li>
+                                <input id="baseUnitDays" name="baseUnit"
+                                        type="radio" value="days" checked="checked" autocomplete="off" />
+                                <label for="baseUnitDays">Days</label>
+                            </li>
+                        </ul>
+                        <span class="configHead">Aggregate function</span>
+                        <ul class="options">
+                            <li>
+                                <input id="aggregateMax" name="aggregate"
+                                        type="radio" value="max" autocomplete="off" />
+                                <label for="aggregateMax">Max</label>
+                            </li>
+                            <li>
+                                <input id="aggregateMin" name="aggregate"
+                                        type="radio" value="min" autocomplete="off" />
+                                <label for="aggregateMin">Min</label>
+                            </li>
+                            <li>
+                                <input id="aggregateSum" name="aggregate"
+                                        type="radio" value="sum" checked="checked" autocomplete="off" />
+                                <label for="aggregateSum">Sum</label>
+                            </li>
+                            <li>
+                                <input id="aggregateAvg" name="aggregate"
+                                        type="radio" value="avg" autocomplete="off" />
+                                <label for="aggregateAvg">Avg</label>
+                            </li>
+                            <li>
+                                <input id="aggregateCount" name="aggregate"
+                                        type="radio" value="count" autocomplete="off" />
+                                <label for="aggregateCount">Count</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="chart-wrapper">
+                        <div id="chart"></div>
+                    </div>
+                </div>
             </li>
             <li id="tab4Tab"></li>
         </ul>
@@ -109,11 +172,116 @@
     .k-grid-footer-wrap {
         height: 32px;
     }
+
+    .chart-wrapper {
+        margin: 0 0 0 20px;
+        width: 650px;
+        height: 400px;
+    }
+    .chart-wrapper .k-chart {
+        padding: 37px;
+        width: 650px;
+        height: 400px;
+    }
+    .configuration
+    {
+        float: right;
+        margin: 0 0 0 15px;
+        padding: 10px;
+        border: 1px solid inherit;
+        background-image: none;
+        -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.45), inset 0 0 30px rgba(0,0,0,0.07);
+        -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.45), inset 0 0 30px rgba(0,0,0,0.07);
+        box-shadow: 0 1px 1px rgba(0,0,0,0.45), inset 0 0 30px rgba(0,0,0,0.07);
+        -webkit-border-radius: 8px;
+        -moz-border-radius: 8px;
+        border-radius: 8px;
+        min-width: 170px;
+        max-width: 300px;
+    }
+    .configuration .configHead,
+    .configuration .infoHead
+    {
+        display: block;
+        font-size: 14px;
+        margin-top: 0;
+        text-indent: 0;
+        margin-bottom: 10px;
+        padding-bottom: 5px;
+        border-bottom: 1px solid #999;
+        background-position: 0 -178px;
+    }
+    .configuration .infoHead
+    {
+        background-position: -107px -722px;
+    }
+    .configuration .configTitle
+    {
+        font-size: 12px;
+        display: block;
+        line-height: 22px;
+        background-position: 0 21px;
+        margin-bottom: 10px;
+    }
+    .configuration .options
+    {
+        list-style:none;
+        margin: 0;
+        padding: 0;
+    }
+    .configuration button
+    {
+        margin: 0;
+        vertical-align: middle;
+    }
+    .configuration .k-textbox
+    {
+        margin-left: 7px;
+        width: 30px;
+    }
+    .configuration .options li { display: block; margin: 0; padding: 0.2em 0; zoom: 1; }
+    .configuration .options li:after
+    {
+        content: "";
+        display: block;
+        clear: both;
+        height: 0;
+    }
+    .configuration label,
+    .configuration input
+    {
+        font-size: 11px;
+        vertical-align: middle;
+        line-height: 20px;
+    }
+    .configuration label
+    {
+        float: left;
+    }
+    .configuration input
+    {
+        width: 40px;
+    }
+    .configuration input,
+    .configuration select,
+    .configuration .k-numerictextbox
+    {
+        float: right;
+    }
+    .configuration input.k-input
+    {
+        float: none;
+    }
+    .configuration .k-button,
+    .configuration .k-widget
+    {
+        margin-bottom: 3px;
+    }
 </style>
 }
 
 @section scripts {
-    <script src="~/Scripts/kendo/2012.3.1114/kendo.web.min.js"></script>
+    <script src="~/Scripts/kendo/2012.3.1114/kendo.all.min.js"></script>
     <script src="~/Scripts/kendo/2012.3.1114/cultures/kendo.culture.de-DE.min.js"></script>
     <script src="~/Scripts/kendo/2012.3.1114/cultures/kendo.culture.en-GB.min.js"></script>
     <script src="~/Scripts/kendo/2012.3.1114/cultures/kendo.culture.en-AU.min.js"></script>
@@ -259,7 +427,7 @@
                 serverSorting: true,
                 serverFiltering: true,
                 serverAggregates: true,
-                pageSize: 20,
+                pageSize: 62,
                 transport: {
                     read: {
                         type: 'post',
@@ -326,6 +494,51 @@
             });
             $('#daysum_startdate').kendoDatePicker();
             $('#daysum_enddate').kendoDatePicker();
+
+            setTimeout(function () { createChart(); }, 400);
+            $(".configuration").bind("change", refresh);
+        }
+        function createChart() {
+            var dataSource = $('#daysumGrid').data("kendoGrid").dataSource;
+
+            $("#chart").kendoChart({
+                theme: $(document).data("kendoSkin") || "default",
+                title: {
+                    text: ""
+                },
+                dataSource: dataSource,
+                series: [
+                    { type: "line", aggregate: "sum", field: "Clicks", name: "Clicks" },
+                    { type: "line", aggregate: "sum", field: "Revenue", name: "Revenue", tooltip: { format: "C" } }
+                ],
+                categoryAxis: {
+                    baseUnit: "days",
+                    field: "Date",
+                    labels: { rotation: -90 }
+                },
+                valueAxis: {
+                    labels: { format: "N0" }
+                },
+                tooltip: {
+                    visible: true,
+                    format: "N0"
+                }
+            });
+        }
+        function refresh() {
+            var chart = $("#chart").data("kendoChart"),
+                series = chart.options.series,
+                categoryAxis = chart.options.categoryAxis,
+                baseUnitInputs = $("input:radio[name=baseUnit]"),
+                aggregateInputs = $("input:radio[name=aggregate]");
+
+            for (var i = 0, length = series.length; i < length; i++) {
+                series[i].aggregate = aggregateInputs.filter(":checked").val();
+            };
+
+            categoryAxis.baseUnit = baseUnitInputs.filter(":checked").val();
+
+            chart.refresh();
         }
     </script>
 }
