--- a/3/ClientPortal.Web/ClientPortal.Web/Content/portal.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/portal.css
@@ -1,11 +1,13 @@
 ﻿.row {
-    width: 1200px;
+    width: 100%;
 }
 
 footer.row {
     color: white;
     background-color: #25579D;
-    height: 160px;
+    height: 30px;
+    position: fixed;
+    bottom: 0;
 }
 
 .row div.grayband {
