--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -9,6 +9,8 @@ Payable Action: @Model.PayableAction
 <br />
 Traffic Type: @Model.TrafficTypes
 <br />
+Mobile LP: @Model.MobileLP
+<br />
 Vertical: @Model.Vertical
 <br />
 Link:<a href="@Model.Link">@Model.Link</a>
