--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
@@ -20,6 +20,10 @@
                 <td>${TrafficTypes}</td>
             </tr>
             <tr>
+                <td class="fieldName">Mobile LP:</td>
+                <td>${MobileLP}</td>
+            </tr>
+            <tr>
                 <td class="fieldName">Link:</td>
                 <td><a href="${Link}" target="_blank">${Link}</a></td>
             </tr>
@@ -99,6 +103,10 @@
             <tr>
                 <td class="fieldName">Traffic Type:</td>
                 <td>${TrafficTypes}</td>
+            </tr>
+            <tr>
+                <td class="fieldName">Mobile LP:</td>
+                <td><input type="text" data-bind="value:MobileLP" name="MobileLP" /></td>
             </tr>
             <tr>
                 <td class="fieldName">Link:</td>
